--- a/script.html
+++ b/script.html
@@ -632,6 +632,7 @@
             logsDataFim: document.getElementById('logs-data-fim'),
             logsFiltroUsuario: document.getElementById('logs-filtro-usuario'),
             logsBusca: document.getElementById('logs-busca'),
+            logsProntuario: document.getElementById('logs-prontuario'),
             logsBtnLimpar: document.getElementById('logs-btn-limpar'),
             tabelaLiberacao: document.getElementById('tabela-liberacao'),
             tabelaLiberacaoHead: document.querySelector('#tabela-liberacao thead tr'),
@@ -2768,6 +2769,9 @@
             if (elementos.logsBusca) {
                 elementos.logsBusca.addEventListener('input', aplicarFiltrosLogsDebounced);
             }
+            if (elementos.logsProntuario) {
+                elementos.logsProntuario.addEventListener('input', aplicarFiltrosLogsDebounced);
+            }
             if (elementos.logsBtnLimpar) {
                 elementos.logsBtnLimpar.addEventListener('click', limparFiltrosLogs);
             }
@@ -4403,7 +4407,7 @@
             if (!elementos.tabelaLogsBody) return;
             const tr = document.createElement('tr');
             const td = document.createElement('td');
-            td.colSpan = 4;
+            td.colSpan = 5;
             td.textContent = mensagem;
             td.className = tipo === 'loading' ? 'table-loading' : tipo === 'error' ? 'table-error' : 'table-empty';
             tr.appendChild(td);
@@ -4415,6 +4419,7 @@
             if (elementos.logsDataFim) elementos.logsDataFim.value = '';
             if (elementos.logsFiltroUsuario) elementos.logsFiltroUsuario.value = '';
             if (elementos.logsBusca) elementos.logsBusca.value = '';
+            if (elementos.logsProntuario) elementos.logsProntuario.value = '';
             aplicarFiltrosLogs();
         }
         function aplicarFiltrosLogs() {
@@ -4428,6 +4433,7 @@
             const dataFimValor = elementos.logsDataFim?.value || '';
             const filtroUsuario = normalizarTextoBusca(elementos.logsFiltroUsuario?.value);
             const filtroBusca = normalizarTextoBusca(elementos.logsBusca?.value);
+            const filtroProntuario = normalizarTextoBusca(elementos.logsProntuario?.value);
 
             const dataInicio = dataInicioValor ? new Date(`${dataInicioValor}T00:00:00`) : null;
             const dataFim = dataFimValor ? new Date(`${dataFimValor}T23:59:59`) : null;
@@ -4445,6 +4451,10 @@
                     const texto = normalizarTextoBusca(`${log.usuario} ${log.acao} ${log.detalhes}`);
                     if (!texto.includes(filtroBusca)) return false;
                 }
+                if (filtroProntuario) {
+                    const prontuarioTexto = normalizarTextoBusca(log.prontuario);
+                    if (!prontuarioTexto.includes(filtroProntuario)) return false;
+                }
                 return true;
             });
 
@@ -4461,6 +4471,7 @@
                     <td>${log.usuario}</td>
                     <td>${log.acao}</td>
                     <td>${log.detalhes}</td>
+                    <td>${log.prontuario || '-'}</td>
                 `;
                 elementos.tabelaLogsBody.appendChild(tr);
             });
