Adicionar filtro e coluna de prontuário em termos

--- a/index.html
+++ b/index.html
@@ -406,6 +406,10 @@
                                 <label for="termo-filtro-busca">Busca rápida</label>
                                 <input type="text" id="termo-filtro-busca" placeholder="Paciente, acompanhante ou armário">
                             </div>
+                            <div class="filter-group">
+                                <label for="termo-filtro-prontuario">Prontuário</label>
+                                <input type="text" id="termo-filtro-prontuario" placeholder="Informe o prontuário">
+                            </div>
                             <button type="button" class="btn btn-secondary" id="termo-filtro-limpar">
                                 <i class="fas fa-eraser" aria-hidden="true"></i> Limpar filtros
                             </button>
@@ -418,6 +422,7 @@
                                     <th>Armário</th>
                                     <th>Acompanhante</th>
                                     <th>Paciente</th>
+                                    <th>Prontuário</th>
                                     <th>Status</th>
                                     <th>Aplicado em</th>
                                     <th>Movimentações</th>
