--- a/script.html
+++ b/script.html
@@ -43,7 +43,8 @@
                 filtrosTermos: {
                     status: 'todos',
                     unidade: 'todas',
-                    busca: ''
+                    busca: '',
+                    prontuario: ''
                 },
                 autenticado: false,
                 usuarioAutenticado: null,
@@ -54,7 +55,8 @@
         const filtrosTermoPadrao = {
             status: 'todos',
             unidade: 'todas',
-            busca: ''
+            busca: '',
+            prontuario: ''
         };
         function obterEstadoLiberacao() {
             if (!estado.liberacao) {
@@ -591,6 +593,7 @@
             termoFiltroStatus: document.getElementById('termo-filtro-status'),
             termoFiltroUnidade: document.getElementById('termo-filtro-unidade'),
             termoFiltroBusca: document.getElementById('termo-filtro-busca'),
+            termoFiltroProntuario: document.getElementById('termo-filtro-prontuario'),
             termoFiltroLimpar: document.getElementById('termo-filtro-limpar'),
             movimentacaoModal: document.getElementById('movimentacao-modal'),
             movimentacaoModalClose: document.getElementById('movimentacao-modal-close'),
@@ -2790,6 +2793,12 @@
                     aplicarFiltrosTermosDebounced();
                 });
             }
+            if (elementos.termoFiltroProntuario) {
+                elementos.termoFiltroProntuario.addEventListener('input', () => {
+                    atualizarFiltrosTermo({ prontuario: elementos.termoFiltroProntuario.value || '' });
+                    aplicarFiltrosTermosDebounced();
+                });
+            }
             if (elementos.termoFiltroLimpar) {
                 elementos.termoFiltroLimpar.addEventListener('click', limparFiltrosTermos);
             }
@@ -3981,6 +3990,9 @@
             if (elementos.termoFiltroBusca && elementos.termoFiltroBusca.value !== filtros.busca) {
                 elementos.termoFiltroBusca.value = filtros.busca;
             }
+            if (elementos.termoFiltroProntuario && elementos.termoFiltroProntuario.value !== filtros.prontuario) {
+                elementos.termoFiltroProntuario.value = filtros.prontuario;
+            }
         }
         function atualizarFiltroUnidadeTermos() {
             if (!elementos.termoFiltroUnidade) return;
@@ -4024,7 +4036,7 @@
 
             const carregamentoId = ++estado.carregamentoTermosId;
             const tbody = elementos.tabelaTermosBody;
-            tbody.innerHTML = '<tr><td colspan="8" style="text-align:center; padding:16px; color:#5b6b86;">Carregando termos...</td></tr>';
+            tbody.innerHTML = '<tr><td colspan="9" style="text-align:center; padding:16px; color:#5b6b86;">Carregando termos...</td></tr>';
 
             if (recarregarArmarios || !estado.armariosCarregados) {
                 await carregarArmarios();
@@ -4032,7 +4044,7 @@
             if (estado.carregamentoTermosId !== carregamentoId) return;
 
             if (!estado.armariosCarregados) {
-                tbody.innerHTML = '<tr><td colspan="8" style="text-align:center; padding:16px; color:#c0392b;">Erro ao carregar termos.</td></tr>';
+                tbody.innerHTML = '<tr><td colspan="9" style="text-align:center; padding:16px; color:#c0392b;">Erro ao carregar termos.</td></tr>';
                 return;
             }
 
@@ -4042,7 +4054,11 @@
             const statusFiltro = normalizarTexto(filtros.status);
             const unidadeFiltro = normalizarTexto(filtros.unidade);
             const buscaFiltro = normalizarTextoBusca(filtros.busca);
-            const possuiFiltros = statusFiltro !== 'todos' || unidadeFiltro !== 'todas' || Boolean(buscaFiltro);
+            const prontuarioFiltro = normalizarTextoBusca(filtros.prontuario);
+            const possuiFiltros = statusFiltro !== 'todos'
+                || unidadeFiltro !== 'todas'
+                || Boolean(buscaFiltro)
+                || Boolean(prontuarioFiltro);
 
             const armariosComTermo = estado.armarios
                 .filter(a => normalizarTexto(a.tipo) === 'acompanhante')
@@ -4064,6 +4080,11 @@
                         a.termoInfo?.acompanhante
                     ];
                     return camposBusca.some(campo => normalizarTextoBusca(campo).includes(buscaFiltro));
+                })
+                .filter(a => {
+                    if (!prontuarioFiltro) return true;
+                    const prontuario = normalizarTextoBusca(a.prontuario || a.termoInfo?.prontuario || '');
+                    return prontuario.includes(prontuarioFiltro);
                 })
                 .filter(a => {
                     const statusTermoNormalizado = normalizarTexto(a.termoStatus || a.termoInfo?.status);
@@ -4096,7 +4117,7 @@
                 const mensagemVazia = possuiFiltros
                     ? 'Nenhum termo encontrado para os filtros selecionados.'
                     : 'Nenhum termo ativo ou pendente no momento.';
-                tbody.innerHTML = `<tr><td colspan="8" style="text-align:center; padding:16px; color:#5b6b86;">${mensagemVazia}</td></tr>`;
+                tbody.innerHTML = `<tr><td colspan="9" style="text-align:center; padding:16px; color:#5b6b86;">${mensagemVazia}</td></tr>`;
                 return;
             }
 
@@ -4153,6 +4174,7 @@
                 const statusTermoNormalizado = normalizarTexto(armario.termoStatus);
                 const finalizado = statusTermoNormalizado === 'finalizado';
                 const emAndamento = statusTermoNormalizado === 'em andamento';
+                const prontuario = (armario.prontuario || termoInfo?.prontuario || '').toString().trim() || '-';
                 const chaveMovimentacao = obterChaveMovimentacaoArmario(armario);
                 const numMovimentacoes = movimentacoesPorArmario.get(chaveMovimentacao)
                     ?? (estado.movimentacoes[chaveMovimentacao]?.contagem || 0);
@@ -4187,6 +4209,7 @@
                         <td>${armario.numero}</td>
                         <td>${armario.nomeVisitante || '-'}</td>
                         <td>${armario.nomePaciente || '-'}</td>
+                        <td>${prontuario}</td>
                         <td><span class="status-label ${statusClasse}">${statusTexto}</span></td>
                         <td>${aplicadoEm}</td>
                         <td>${numMovimentacoes} registro(s)</td>
