--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                             </div>
                             <div class="filter-group">
                                 <label for="termo-filtro-busca">Busca rápida</label>
-                                <input type="text" id="termo-filtro-busca" placeholder="Paciente, acompanhante ou armário">
+                                <input type="text" id="termo-filtro-busca" placeholder="Paciente, acompanhante, armário ou prontuário">
                             </div>
                             <button type="button" class="btn btn-secondary" id="termo-filtro-limpar">
                                 <i class="fas fa-eraser" aria-hidden="true"></i> Limpar filtros
@@ -418,6 +418,7 @@
                                     <th>Armário</th>
                                     <th>Acompanhante</th>
                                     <th>Paciente</th>
+                                    <th>Prontuário</th>
                                     <th>Status</th>
                                     <th>Aplicado em</th>
                                     <th>Movimentações</th>
