--- a/script.html
+++ b/script.html
@@ -4054,9 +4054,11 @@
             const statusFiltro = normalizarTexto(filtros.status);
             const unidadeFiltro = normalizarTexto(filtros.unidade);
             const buscaFiltro = normalizarTextoBusca(filtros.busca);
+            const prontuarioFiltro = normalizarTextoBusca(filtros.prontuario);
             const possuiFiltros = statusFiltro !== 'todos'
                 || unidadeFiltro !== 'todas'
-                || Boolean(buscaFiltro);
+                || Boolean(buscaFiltro)
+                || Boolean(prontuarioFiltro);
 
             const armariosComTermo = estado.armarios
                 .filter(a => normalizarTexto(a.tipo) === 'acompanhante')
