--- a/style.html
+++ b/style.html
@@ -2785,6 +2785,16 @@
             justify-content: flex-end;
             align-items: flex-end;
         }
+        .wizard-volume-photo {
+            display: flex;
+            flex-direction: column;
+            gap: 6px;
+        }
+        .wizard-volume-photo .volume-photo-status {
+            font-size: 0.78rem;
+            color: var(--text-color);
+            font-weight: 600;
+        }
         .wizard-volume-actions .btn {
             padding: 10px 14px;
             border-radius: 10px;
@@ -2822,6 +2832,14 @@
             .wizard-volume-actions {
                 justify-content: flex-start;
             }
+        }
+        .photo-capture {
+            display: flex;
+            flex-direction: column;
+            gap: 6px;
+        }
+        .photo-capture .helper-text {
+            margin: 0;
         }
         .wizard-actions {
             padding: 20px 28px;
