--- a/index.html
+++ b/index.html
@@ -968,6 +968,16 @@
                                             <input type="time" id="mov-hora" class="form-control" required>
                                         </div>
                                     </div>
+                                    <div class="form-row">
+                                        <div class="form-group">
+                                            <label class="wizard-required">Foto da movimentação</label>
+                                            <div class="photo-capture">
+                                                <button type="button" class="btn btn-ghost" id="mov-foto-trigger"><i class="fas fa-camera"></i> Capturar foto</button>
+                                                <input type="file" id="mov-foto-input" accept="image/*" capture="environment" class="sr-only">
+                                                <div class="helper-text" id="mov-foto-status">Nenhuma foto anexada.</div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </section>
